# vast-docking-workbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
agent/: COMPANY_PROBLEM_CANVAS.md  EXECUTION_BOARD.md  TARGET_BRIEF_VAST.md
examples/: haven1-crew-visit.yaml  haven2-growth-2028.yaml
profiles/limits/: idss-approach-bounds.yaml  lda-gen-1.yaml
profiles/stations/: haven-1.yaml  haven2-1module.yaml  haven2-2module.yaml  haven2-3module.yaml
profiles/vehicles/: cargo-cbm-pallet.yaml  crew-dragon-ida-heritage.yaml  crew-dragon-lda-gen1.yaml  crew-dragon-lda-gen2.yaml  heavy-visit-synthetic.yaml  module-haven-2-expansion.yaml
scripts/: publish-site.sh
site/: app.js  index.html  styles.css
site/data/: demo-summary.json
tests/: test_doctor.py
vast-docking-workbench/: index.html
vast_dock/: __init__.py  cli.py  doctor.py  loader.py  models.py  receipt.py  simulator.py
