[project]
name = "vast-docking-workbench"
version = "0.1.0"
description = "Plan, simulate, and receipt-check station docking compatibility using published Vast LDA specs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Enaguthi" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vast-dock = "vast_dock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vast_dock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
